client/src/index.css
body {
    background-color: rgb(60, 63, 68);
    margin: 0;
    color: rgb(210, 210, 210);
    font-family: 'Roboto', sans-serif;
    font-size: 12pt; 
}

.message {
    display: block;
    transition: background-color 0.2s ease;
}

.message:hover {
    background-color: rgb(100, 103, 108);
}

.message-container {
    overflow-y: auto;
    height: 94vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 5px;
}

.chat {
    border: 5px solid black;
    width: 90%;
}

.input-field {
    display: flex;
    width: 100%;
    align-items: center;
}

.message-input {
    flex-grow: 1;
    background-color: rgb(100, 103, 108);
    resize: vertical;
    overflow-y: hidden;
    height: auto;
}

#login-form {
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

#login-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 12px;
    width: 20%;
}

.login-input {
    background-color: rgba(100, 103, 108, 0);
    border-width: 0;
    border-bottom: 1px solid black;
    width: 100%;
    font-size: 13pt;
}

.input-error {
    border: 1px solid red;
}

.error-message{
    background-color: rgb(219, 0, 0, 0.5);
    font-size: 12pt;
    text-align: center;
    border-radius: 10px;
    padding-top: 17px;
    padding-bottom: 17px;
}
#header{
    width: 100%;
    display: flex;
    justify-content: start;
    align-items: center;
    height: 10vh;
    background-color: rgb(40, 43, 48);
    position: absolute;
}
#main-interface{
    display:flex;
    flex-direction: row;
    width: 100%;
}
#user-container{
    background-color: rgb(50, 53, 58);
    width: 10%;
    height: 100%;
}

